Show age on calender event

--- a/src/DMKOroCRM/Bundle/ContactBundle/Resources/translations/messages.de.yml
+++ b/src/DMKOroCRM/Bundle/ContactBundle/Resources/translations/messages.de.yml
@@ -2,4 +2,6 @@ dmkorocrm:
     contact:
         action.add_calendar.title:  Zum Geburtstagskalender
         menu.birthdays:             Geburtstage
+    calendar.bornOn:                Geboren am
+    calendar.birthday:              Geburtstag
 
